修改日志输出路径

--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -6,7 +6,7 @@ handlers = org.apache.juli.FileHandler, java.util.logging.ConsoleHandler
 ############################################################
 
 org.apache.juli.FileHandler.level = FINE
-org.apache.juli.FileHandler.directory = ../logs/platForm
+org.apache.juli.FileHandler.directory = E:/workspace/back/platForm
 org.apache.juli.FileHandler.prefix = error-debug.
 
 java.util.logging.ConsoleHandler.level = FINE
