--- a/src/main/resources/spy.properties
+++ b/src/main/resources/spy.properties
@@ -88,7 +88,7 @@ appender=com.p6spy.engine.spy.appender.StdoutLogger
 # name of logfile to use, note Windows users should make sure to use forward slashes in their pathname (e:/test/spy.log) 
 # (used for com.p6spy.engine.spy.appender.FileLogger only)
 # (default is spy.log)
-logfile = E:\ccicall\Applog\logs\spy.log
+logfile = E:/workspace/back/platForm/spy.log
 
 # append to the p6spy log file. if this is set to false the
 # log file is truncated every time. (file logger only)
