--- a/src/main/resources/properties/db.properties
+++ b/src/main/resources/properties/db.properties
@@ -1,4 +1,4 @@
 db.driverClassName=com.mysql.jdbc.Driver
-db.url=jdbc\:mysql\://localhost\:3306/platform
+db.url=jdbc\:mysql\://47.98.242.154\:3306/platform
 db.username=root
 db.password=123456
